fix(css):move ptr-- to css

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -71,3 +71,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* pull to refresh */
+div[class^="ptr--"],
+div[class*=" ptr--"] {
+  color: hsl(var(--primary));
+}
