--- a/client/src/index.css
+++ b/client/src/index.css
@@ -70,15 +70,53 @@
   body {
     @apply bg-background text-foreground;
   }
+  /* time input icon */
   input[type="time"]::-webkit-calendar-picker-indicator {
     filter: brightness(0) saturate(100%) invert(23%) sepia(71%) saturate(3271%)
       hue-rotate(352deg) brightness(94%) contrast(83%);
     scale: 1.8;
   }
-}
-
-/* pull to refresh */
-div[class^="ptr--"],
-div[class*=" ptr--"] {
-  color: hsl(var(--primary));
+  /* pull to refresh */
+  div[class^="ptr--"],
+  div[class*=" ptr--"] {
+    @apply text-primary;
+  }
+  /* printing light theme */
+  @media print {
+    :root {
+      --inverse: 0 0% 3.9%;
+      --inverse-foreground: 0 0% 98%;
+      --inverse-border: 0 0% 14.9%;
+      --background: 0 0% 100%;
+      --foreground: 0 0% 3.9%;
+      --card: 0 0% 100%;
+      --card-foreground: 0 0% 3.9%;
+      --popover: 0 0% 100%;
+      --popover-foreground: 0 0% 3.9%;
+      --primary: 0 72.2% 50.6%;
+      --primary-foreground: 0 85.7% 97.3%;
+      --secondary: 0 0% 96.1%;
+      --secondary-foreground: 0 0% 9%;
+      --muted: 0 0% 96.1%;
+      --muted-foreground: 0 0% 45.1%;
+      --accent: 0 0% 96.1%;
+      --accent-foreground: 0 0% 9%;
+      --success: 142.1 70.6% 45.3%;
+      --success-foreground: 0 0% 98%;
+      --warning: 38 92% 50%;
+      --warning-foreground: 48 96% 98%;
+      --destructive: 0 84.2% 60.2%;
+      --destructive-foreground: 0 0% 98%;
+      --border: 0 0% 89.8%;
+      --input: 0 0% 89.8%;
+      --ring: 0 72.2% 50.6%;
+      --radius: 0.5rem;
+    }
+    html {
+      background-color: hsl(0 0% 100%);
+    }
+    body {
+      zoom: 85%;
+    }
+  }
 }
